# wore

./: .env.example  .gitignore  LICENSE  README.md  TASKS.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml  web.yml
public/: theme-init.js
scripts/: make-icon.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIPicker.tsx  Brand.tsx  SettingsDialog.tsx  ThemeToggle.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  popover.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx
src/editor/: AIPanel.tsx  EditorPage.tsx  FindBar.tsx  ImageGenDialog.tsx  ImageToolbar.tsx  ReferencePanel.tsx  SelectionChat.tsx  Toolbar.tsx  WoreEditor.tsx  context.ts
src/lib/: ai-actions.ts  ai-presets.tsx  ai.ts  editor.ts  http.ts  idb.ts  images.ts  log.ts  store.ts  utils.ts
src/lib/documents/: convert.ts  docx.ts  html.ts  manager.ts  markdown.ts  pdf.ts  pptx.ts
src/pages/: StartPage.tsx
src/presentation/: PresentWindow.tsx  PresentationAIPanel.tsx  PresentationPage.tsx
src/types/: mammoth-browser.d.ts
